# dEdxQA

./: README.md
macro/: draw_dEdx_clusgz_1D.C  draw_dEdx_clusgz_matrix.C  draw_time_series.C  draw_time_series_negative.C  draw_time_series_positive.C
macro/Run24/: draw_dEdx_clusgz_1D_negative.C  draw_dEdx_clusgz_1D_positive.C  draw_dEdx_clusgz_matrix.C  draw_time_series_fit_negative.C  draw_time_series_fit_positive.C
macro/Run25/: draw_dEdx_clusgz_1D.C  draw_time_series_fit_negative.C  draw_time_series_fit_positive.C
module/: Makefile.am  configure.ac  dEdx.cc  dEdx.h
